fixed formalism on mobile

--- a/_sass/_formalism-div.scss
+++ b/_sass/_formalism-div.scss
@@ -1,22 +1,22 @@
-@media all and (max-width: 699px) {
+/*@media all and (max-width: 699px) {
   .atom {
     margin-left: 0;
-    width: 100%;
+    //width: 100%;
+    overflow-x: scroll;
+  }
+  .molecule {
+    //width: 100%;
   }
 }
 @media all and (min-width: 700px) {
   .atom {
     margin-left: 1em;
   }
-}
-
-div.formalism {
-  margin:0;
-  width: 100%;
-}
+}*/
 .molecule {
   margin-bottom: 1em;
-
+  width: 100%;
+  border: 1px solid #aaa;
   div.title {
     font-family: glam;
     font-size:1.5em;
@@ -27,15 +27,32 @@ div.formalism {
       display:none;
     }
   }
-
+}
   div.atom {
-    margin-bottom:0.5em;
+    //margin-bottom:0.5em;
+    max-width: 800px;
+    background: #ccc;
+    overflow-x: auto;
+    text-align:left;
+
+    .title {
+      background: #fff;
+      margin:0;
+    }
+    .molecule {
+      margin-bottom:0;
+      border:none;
+    }
   }
 
   div.eqn {
     div.lhs {
       display: table-cell;
       text-align: right;
+
+      .rhs {
+        min-width: 0;
+      }
     }
     div.conn {
       display: table-cell;
@@ -45,6 +62,9 @@ div.formalism {
     div.rhs {
       display: table-cell;
       text-align: left;
+      min-width: 150px;
+
+
 
       &.mult {
         border-left: 2px solid #000;
@@ -59,8 +79,8 @@ div.formalism {
   }
 
   div.wrap {
-    display: table-row;
-
+    //width: 100%;
+    padding: 0.25em 0.5em;
     div {
       display: table-cell;
     }
@@ -69,4 +89,3 @@ div.formalism {
   div.categorical {
     display: inline;
   }
-}
